--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -11,265 +11,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     <!-- Firebase SDK -->
-   <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-database-compat.js"></script>
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #f8fafc;
-        }
-        .card-hover:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-        }
-        .custom-scrollbar::-webkit-scrollbar {
-            width: 6px;
-            height: 6px;
-        }
-        .custom-scrollbar::-webkit-scrollbar-track {
-            background: #f1f1f1;
-        }
-        .custom-scrollbar::-webkit-scrollbar-thumb {
-            background: #c7d2fe;
-            border-radius: 3px;
-        }
-        .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-            background: #a5b4fc;
-        }
-        .error-message {
-            color: #dc2626;
-            font-size: 0.875rem;
-            margin-top: 0.25rem;
-        }
-        .loader {
-            border: 4px solid #f3f3f3;
-            border-top: 4px solid #4f46e5;
-            border-radius: 50%;
-            width: 24px;
-            height: 24px;
-            animation: spin 1s linear infinite;
-            margin: 0 auto;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-        .product-image-container {
-            position: relative;
-            width: 100%;
-            padding-top: 100%; /* Aspect ratio 1:1 for square */
-        }
-        .product-image {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: contain; /* Show full image without cropping */
-            border-radius: 8px;
-            background-color: #f9f9f9; /* Light background for transparency */
-        }
-    </style>
-</head>
-<body>
-    <div class="min-h-screen flex flex-col">
-        <!-- Header -->
-        <header class="bg-gradient-to-r from-indigo-600 to-purple-600 text-white shadow-lg">
-            <div class="container mx-auto px-4 py-6">
-                <div class="flex flex-col md:flex-row justify-between items-center">
-                    <div class="flex items-center mb-4 md:mb-0">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mr-3" viewBox="0 0 20 20" fill="currentColor">
-                            <path fill-rule="evenodd" d="M10 2a4 4 0 00-4 4v1H5a1 1 0 00-.994.89l-1 9A1 1 0 004 18h12a1 1 0 00.994-1.11l-1-9A1 1 0 0015 7h-1V6a4 4 0 00-4-4zm2 5V6a2 2 0 10-4 0v1h4zm-6 3a1 1 0 112 0 1 1 0 01-2 0zm7-1a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
-                        </svg>
-                        <h1 class="text-2xl md:text-3xl font-bold">MEXIQUENSE</h1>
-                    </div>
-                    <div class="flex flex-wrap gap-2">
-                        <button id="adminViewBtn" class="bg-white text-indigo-600 hover:bg-indigo-100 px-4 py-2 rounded-lg font-medium transition-all">Panel de Administración</button>
-                        <button id="publicViewBtn" class="bg-white text-indigo-600 hover:bg-indigo-100 px-4 py-2 rounded-lg font-medium transition-all">Productos</button>
-                        <div id="adminButtons" class="flex flex-wrap gap-2">
-                            <button id="importBtn" class="bg-white text-indigo-600 hover:bg-indigo-100 px-4 py-2 rounded-lg font-medium flex items-center transition-all">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM6.293 6.707a1 1 0 010-1.414l3-3a1 1 0 011.414 0l3 3a1 1 0 01-1.414 1.414L11 5.414V13a1 1 0 11-2 0V5.414L7.707 6.707a1 1 0 01-1.414 0z" clip-rule="evenodd" />
-                                </svg>
-                                Importar CSV
-                            </button>
-                            <button id="exportBtn" class="bg-white text-indigo-600 hover:bg-indigo-100 px-4 py-2 rounded-lg font-medium flex items-center transition-all">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd" d="M3 17a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM6.293 9.293a1 1 0 011.414 0L10 11.586l2.293-2.293a1 1 0 111.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z" clip-rule="evenodd" />
-                                </svg>
-                                Exportar PDF
-                            </button>
-                            <button id="addProductBtn" class="bg-white text-indigo-600 hover:bg-indigo-100 px-4 py-2 rounded-lg font-medium flex items-center transition-all">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
-                                </svg>
-                                Nuevo Producto
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
-
-        <!-- Admin View (Panel de Administración) -->
-        <section id="adminView" class="flex-grow container mx auto px-4 py-8 hidden">
-            <!-- Search and Filter Bar -->
-            <div class="bg-white rounded-xl shadow-md p-4 mb-8">
-                <div class="flex flex-col md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-4">
-                    <div class="flex-grow">
-                        <div class="relative">
-                            <input id="searchInput" type="text" placeholder="Buscar productos..." class="w-full pl-10 pr-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 absolute left-3 top-3.5" viewBox="0 0 20 20" fill="currentColor">
-                                <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
-                            </svg>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Bulk Actions -->
-            <div class="flex items-center space-x-4 mb-4">
-                <input type="checkbox" id="selectAll" class="h-5 w-5 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                <label for="selectAll" class="text-gray-700 font-medium">Seleccionar Todos</label>
-                <button id="deleteSelected" class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded-lg font-medium transition-all disabled:opacity-50 disabled:cursor-not-allowed" disabled>Eliminar Seleccionados</button>
-            </div>
-
-            <!-- Products Grid for Admin -->
-            <div id="productsContainer" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
-                <!-- Products will be dynamically inserted here -->
-            </div>
-        </section>
-
-        <!-- Public View (Productos) -->
-        <section id="publicView" class="flex-grow container mx auto px-4 py-8">
-            <div class="bg-white rounded-xl shadow-md p-4 mb-8">
-                <h2 class="text-2xl font-bold text-indigo-600 mb-4">Catálogo de Productos</h2>
-                <!-- Search Bar for Public View -->
-                <div class="bg-white rounded-xl shadow-md p-4 mb-8">
-                    <div class="flex flex-col md:flex-row md:items-center space-y-4 md:space-y-0 md:space-x-4">
-                        <div class="flex-grow">
-                            <div class="relative">
-                                <input id="publicSearchInput" type="text" placeholder="Buscar productos por nombre o UPC..." class="w-full pl-10 pr-4 py-3 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-400 absolute left-3 top-3.5" viewBox="0 0 20 20" fill="currentColor">
-                                    <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
-                                </svg>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="publicTabs" class="flex space-x-4 border-b border-gray-200">
-                    <!-- Tabs will be dynamically inserted here -->
-                </div>
-                <div id="publicTabContent" class="mt-6">
-                    <!-- Product grids for each tab will be inserted here -->
-                </div>
-            </div>
-        </section>
-
-        <!-- Footer -->
-        <footer class="bg-gray-800 text-white py-6">
-            <div class="container mx auto px-4 text-center">
-                <p>© 2025 MEXIQUENSE - Sistema de Catálogo</p>
-            </div>
-        </footer>
-
-        <!-- Modal for Product Details (shared for both views, but no edit/delete in public) -->
-        <div id="productDetailModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
-            <div class="bg-white rounded-xl shadow-xl w-full max-w-4xl max-h-[90vh] overflow-hidden flex flex-col">
-                <div class="bg-indigo-600 text-white px-6 py-4 flex justify-between items-center">
-                    <h3 id="modalProductTitle" class="text-xl font-bold">Detalles del Producto</h3>
-                    <button id="closeDetailModal" class="text-white hover:text-indigo-200">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                        </svg>
-                    </button>
-                </div>
-                <div class="p-6 overflow-y-auto custom-scrollbar flex-grow">
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                        <div>
-                            <div id="productImage" class="bg-gray-100 rounded-lg h-64 flex items-center justify-center mb-4 overflow-hidden">
-                                <img id="productImageSrc" src="" class="max-h-full max-w-full object-contain hidden" alt="Producto" onerror="this.onerror=null; this.src='https://placehold.co/300x200/png?text=Error+al+cargar';">
-                                <svg id="productImagePlaceholder" xmlns="http://www.w3.org/2000/svg" class="h-24 w-24 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z" />
-                                </svg>
-                            </div>
-                            <div class="space-y-2" id="productFields">
-                                <p><strong>Número de Ítem:</strong> <span id="productItemNumber" class="text-gray-700"></span></p>
-                                <p><strong>UPC:</strong> <span id="productUpc" class="text-gray-700"></span></p>
-                                <p><strong>Tamaño:</strong> <span id="productSize" class="text-gray-700"></span></p>
-                                <p><strong>Cantidad:</strong> <span id="productQty" class="text-gray-700"></span></p>
-                            </div>
-                            <div id="customFields" class="space-y-2 mt-4"></div>
-                            <div class="mt-4 admin-only">
-                                <button id="addCustomFieldBtn" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded-lg font-medium transition-all">Agregar Campo Personalizado</button>
-                            </div>
-                            <div id="customFieldForm" class="hidden mt-4 space-y-4 admin-only">
-                                <div>
-                                    <label for="customKey" class="block text-sm font-medium text-gray-700 mb-1">Clave (ej. Palimex):</label>
- The user says "y ahora que hago", meaning "and now what do I do". This is in the context of the previous message where they pasted the Firebase config from npm install, but that's not the web config; it's for Node.js.
-
-The user pasted:
-npm install firebase // Import the functions you need from the SDKs you need
-import { initializeApp } from "firebase/app";
-import { getAnalytics } from "firebase/analytics";
-// TODO: Add SDKs for Firebase products that you want to use
-// https://firebase.google.com/docs/web/setup#available-libraries
-
-// Your web app's Firebase configuration
-// For Firebase JS SDK v7.20.0 and later, measurementId is optional
-const firebaseConfig = {
-  apiKey: "AIzaSyAdPcUhck0JzYonJAYfmfHKajDu96FqZsg",
-  authDomain: "catalogomexiquense.firebaseapp.com",
-  databaseURL: "https://catalogomexiquense-default-rtdb.firebaseio.com",
-  projectId: "catalogomexiquense",
-  storageBucket: "catalogomexiquense.firebasestorage.app",
-  messagingSenderId: "105727682757",
-  appId: "1:105727682757:web:2887f0de033b857786e8ac",
-  measurementId: "G-PRXPTEW7WL"
-};
-
-// Initialize Firebase
-const app = initializeApp(firebaseConfig);
-const analytics = getAnalytics(app);
-
-This is the web config, but in Node.js format (with import statements).
-
-For the HTML/JS code, we need to use the global firebase namespace, as in the SDK scripts we have.
-
-So, I can extract the firebaseConfig object from what they pasted.
-
-Now, the user is asking "y ahora que hago" - "now what do I do".
-
-I need to provide the full HTML code with their config integrated.
-
-Also, add the password and pre-load as per earlier request.
-
-The response style: Provide the code in copy-paste format, keep principal code intact, only improvements.
-
-No function calls, as the question is "y ahora que hago", which is follow-up.
-
-Response: Explain what to do next, then give the full code.¡Hola! Ahora que tienes el firebaseConfig, lo integré al código para que funcione con Firebase. Esto hace que los productos que agregues en tu PC se guarden en la nube y se vean en cualquier dispositivo (incluido el móvil de tu cliente). Mantuve el código principal intacto (interfaz, búsqueda, import/export, campos personalizados), solo mejoré el guardado/carga con Firebase, agregué pre-carga de productos de ejemplo y la contraseña para el Panel de Administración ("admin123" – cámbiala en el código si quieres).
-
-Copia y pega este código completo en TextEdit, guarda como "index.html", sube a GitHub (sobrescribe el viejo), y refresca la URL en tu móvil. Los productos se verán en todos los dispositivos.
-
-Si ves errores en la consola, avísame para ajustar.
-
-```html
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MEXIQUENSE - Catálogo de Productos</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
-    <!-- Firebase SDK -->
-    <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.13.0/firebase-database.js"></script>
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -465,7 +208,7 @@ Si ves errores en la consola, avísame para ajustar.
                                     <label for="customKey" class="block text-sm font-medium text-gray-700 mb-1">Clave (ej. Palimex):</label>
                                     <input type="text" id="customKey" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
                                     <p id="customKeyError" class="error-message hidden"></p>
-                               </div>
+                                </div>
                                 <div>
                                     <label for="customValue" class="block text-sm font-medium text-gray-700 mb-1">Valor (ej. $3.80):</label>
                                     <input type="text" id="customValue" class="w-full px-4 py-2 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
